[Dependency]: Update to fabric-loom 1.6.+